    for your work.
  * Applied patch from Thierry Basque that fixes the --list
    argument for update-java-alternatives. (Closes: #563070)
  * Updated the off-line copy of the Debian Java FAQ.
  * Added sh4 to the list of architectures that support openjdk-6.
    (Closes: #577482)
  * Removed useless commands from debian/rules and removed B-D on
    dpsyco-devel.

 -- Niels Thykier <niels@thykier.net>  Tue, 06 Apr 2010 21:45:15 +0200

java-common (0.35) unstable; urgency=low

  * Added myself to Uploaders.
  * Added myself to the list of Authors of the Java Policy.
  * Integrated adapted parts of the FOSDEM06 proposal into the Java
    Policy.
    - Java libraries are no longer required to depend on a JVM
    (Closes: #227587, #505166)
  * Updated to java-faq to match the online version.
  * Bumped debhelper compat to 7.
    - Added missing ${misc:Depends}
  * Use the version from the changelog rather than the dir to determine
    the debian "revision" of the default-* packages. It is more robust.
  * Removed old publish rule - the policy is updated automatically after
    upload now.
  * Updated the rules to update the java faq.
  * Converted source to 3.0 (native).
  * Bumped Standards-Version to 3.8.4 - no changes required.
  * Set DM-Upload-Allowed.
  * Removed self suggest in default-jre.
  * Fixed a spelling mistake in README.Debian.
  * Removed Arnaud Vandyck from Uploaders - Thanks for your work on this
    package.

 -- Niels Thykier <niels@thykier.net>  Mon, 05 Apr 2010 18:01:40 +0200

java-common (0.34) unstable; urgency=low

  * Build a default-jdk-doc package to make the documentation available
    in a path (/usr/share/doc/default-jdk/api) independent of the depending
    package.

 -- Matthias Klose <doko@debian.org>  Fri, 11 Dec 2009 06:22:35 +0100

java-common (0.33) unstable; urgency=low

  [ Matthias Klose ]
  * Set package sections to java.

  [ Torsten Werner ]
  * Add myself to Uploaders.