@@ -6,16 +6,14 @@
 <!ENTITY mustnot "<emphasis>must not</emphasis>">
 <!ENTITY may "<emphasis>may</emphasis>">
 <!ENTITY should "<emphasis>should</emphasis>">
-<!ENTITY jvm "<emphasis>java-virtual-machine</emphasis>">
 <!ENTITY j1r "<emphasis>java1-runtime</emphasis>">
 <!ENTITY j2r "<emphasis>java2-runtime</emphasis>">
-<!ENTITY jc "<emphasis>java-compiler</emphasis>">
-<!ENTITY j2c "<emphasis>java2-compiler</emphasis>">
 <!ENTITY d-jdk "<emphasis>default-jdk</emphasis>">
 <!ENTITY d-jbdep "<emphasis>default-jdk-builddep</emphasis>">
 <!ENTITY d-jdoc "<emphasis>default-jdk-doc</emphasis>">
 <!ENTITY JVM "<acronym>JVM</acronym>">
 <!ENTITY JIT "<acronym>JIT</acronym>">
+<!ENTITY debpol "http://www.debian.org/doc/debian-policy">
 ]>
 
 <book>
@@ -111,8 +109,7 @@
     <title>Policy</title>
     
     <para>
-      Virtual packages are created: &jc;, &j2c;,
-      &jvm;, &j1r; and &j2r;.
+      Virtual packages are created: &j1r; and &j2r;.
     </para>
 
     <para>
@@ -143,7 +140,7 @@
       <title>Virtual machines</title>
       
       <para>
-	Java virtual machines &must; provide &jvm; and
+	Java virtual machines &must;
 	depend on java-common. They can also provide the runtime environment
 	that the package contains (&j1r; and/or &j2r;). If it does not
 	provide the files itself it &must; depend on the needed runtime
@@ -184,46 +181,40 @@
       </para>
     </sect1>
     
-    <sect1 id="policy-compiler">
-      <title>Java compilers</title>
-      
-      <para>
-	Java compilers &must; provide &jc; and/or &j2c; and depend on
-	java-common. They &must; also depend on the needed runtime environment
-	(&j1r; and/or &j2r;).
-      </para>
-
-      <para>
-	They &should; use <filename>/etc/alternatives</filename>
-	for the name 'javac' if they are command-line compatible
-	with Sun's JDK javac. They &should; have a CLASSPATH predefined to
-	include the java core classes need for the compiler.
-      </para>
-
-    </sect1>
-    
     <sect1 id="policy-programs">
       <title>Java programs</title>
       
       <para>
-	Programs &must; have executable(s) in
-	<filename>/usr/bin</filename> and be executable. They can be Java
-	classes (using binfmt_misc) or wrappers. In any case, they &must; run
+	Programs &must; have one or more executables in one or more of
+	the directories defined by <ulink url="&debpol;/ch-opersys.html#s9.1">
+	9.1</ulink> of the Debian Policy. These &must; either be a wrapper
+	script or a symlink to an executable jar. In any case, they &must; run
 	without specific environment variables (see
-	<ulink url="http://www.debian.org/doc/debian-policy/ch-opersys.html#s10.9">Policy
+	<ulink url="&debpol;/ch-opersys.html#s10.9">Policy
 	  10.9</ulink>), for instance CLASSPATH. They &must; respect the Policy
 	rules for executables (for instance a manual page per executable, see
-	<ulink url="http://www.debian.org/doc/debian-policy/ch-docs.html#s13.1">
+	<ulink url="&debpol;/ch-docs.html#s13.1">
 	  Policy 13.1</ulink>).
       </para>
+
       <para>
-        If they have their own auxiliary classes, they
-	&must; be in a jar file in <filename>/usr/share/java</filename>. The
-        name of the jar &should; follow the same naming conventions as for
-        libraries.
+	If the package installs a jar (or a symlink to a jar) as an executable
+	the package &must; have an absolute dependency on jarwrapper or an
+	equivalent package, which allows jar files to be executed directly
+	from PATH like a normal program. The package &must; also ensure that
+	the correct class is used as main-class. As an example jarwrapper
+	uses the Main-Class attribute from the main part of the Manifest of the
+	jar file to determine this.
+      </para>
+
+      <para>
+	Additional classes in the package must be packaged in one or more JARs 
+	which can be put into /usr/share/java (if they are intended to be used 
+	by other programs) or into a private directory in
+	/usr/share/&lt;package&gt;.
       </para>
       <para>
-        Programs &must; depend on &jvm; and the needed
+        Programs &must; depend on the needed
 	runtime environment (&j1r; and/or &j2r;).
       </para>
       <para>
