@@ -13,6 +13,15 @@ java-common (0.36) UNRELEASED; urgency=low
   * Removed useless commands from debian/rules and removed B-D on
     dpsyco-devel.
 
+  * Policy Changes:
+    - Removed section "Java Compilers".
+    - Retired the virtual packages java-virtual-machine, java-compiler
+      and java2-compiler
+    - Relax program installation locations (Closes: #395372)
+    - Specified installation location for private program jars.
+    - Removed mention of binfmt_misc in favor of jarwrapper.
+      (Closes: #227594)
+
  -- Niels Thykier <niels@thykier.net>  Tue, 06 Apr 2010 21:45:15 +0200
 
 java-common (0.35) unstable; urgency=low
